fix: change material report dialog visibility

--- a/CES.DocManager.WebApi/ClientApp/src/components/MaterialReportDialog/MaterialReportDialog.style.scss
+++ b/CES.DocManager.WebApi/ClientApp/src/components/MaterialReportDialog/MaterialReportDialog.style.scss
@@ -7,7 +7,6 @@
   width: 200px;
   height: 150px;
   background-color: white;
-  z-index: 5;
   border-radius: 4px;
   box-shadow: rgb(0 0 0 / 70%) 0px 0px 20px 4px;
 }
